otter/tests/ui/fail_missing_env.stderr
error: every `#[otter::nif]` function must take `Env` as its first argument
 --> tests/ui/fail_missing_env.rs:6:1
  |
6 | fn empty() -> otter::types::Atom {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
